--- a/public/vinsol_spree_themes/theme-ClassicWhite-3-3-bump/views/spree/layouts/spree_application.html.erb
+++ b/public/vinsol_spree_themes/theme-ClassicWhite-3-3-bump/views/spree/layouts/spree_application.html.erb
@@ -16,7 +16,7 @@
       <%= render partial: 'spree/shared/header' %>
 
       <div class="body-section">
-        <%= render partial: 'spree/shared/homepage_brand' %>
+        <%#= render partial: 'spree/shared/homepage_brand' %>
 
         <div class="container">
           <%#= breadcrumbs(@taxon) %>
