--- a/public/vinsol_spree_themes/theme-ClassicWhite-3-3-bump/views/spree/shared/_nav_bar.html.erb
+++ b/public/vinsol_spree_themes/theme-ClassicWhite-3-3-bump/views/spree/shared/_nav_bar.html.erb
@@ -1,4 +1,5 @@
-<nav class="col-md-8 col-sm-9" id="top-nav-bar">
+<nav class="col-md-6" id="top-nav-bar">
+<!-- <nav class="col-md-8 col-sm-9" id="top-nav-bar"> -->
   <ul id="nav-bar" class="header-top-navbar" data-hook>
     <%= render partial: 'spree/shared/login_bar' %>
 
