--- a/public/vinsol_spree_themes/theme-ClassicWhite-3-3-bump/views/spree/shared/_header.html.erb
+++ b/public/vinsol_spree_themes/theme-ClassicWhite-3-3-bump/views/spree/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <header id="header" data-hook>
     <div class="container">
       <div class="row">
-        <figure id="logo" class="col-md-4 col-sm-3 header-logo-section" data-hook>
+        <figure id="logo" class="col-md-12  header-logo-section" data-hook>
           <div class="row">
             <div class="col-xs-6">
               <a href="/" class="header-logo">Spree<b>Theme</b></a>
